@@ -54,6 +54,7 @@ version <next>:
 - Bink demuxer and Bink Audio decoder
 - enable symbol versioning by default for linkers that support it
 - IFF PBM/ILBM bitmap decoder
+- concat protocol
 
 
 
